--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-
+  flutter_icons: ^0.1.4
+  url_launcher: ^5.1.1
+  flutter_spinkit: ^3.1.0
   cloud_firestore:
     
   flutter:
